Fixed: Horizontal overflow no longer stretches the DOM

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -725,3 +725,7 @@
 .blurb3 {
   font-size: 15px;
 }
+
+.blurb4 {
+  overflow-x:scroll;
+}
